Separate out testdata protos into standalone proto build rules. This will help with Go modules support, where we are generating protos with protoc which should coexist with bazel proto import names.
PiperOrigin-RevId: 339966015

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -109,7 +109,7 @@ cc_test(
         "//proto/google/fhir/proto/stu3:fhirproto_extensions_cc_proto",
         "//proto/google/fhir/proto/stu3:ml_extensions_cc_proto",
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
-        "//testdata/stu3/profiles:test_cc_proto",
+        "//testdata/stu3/profiles:test_extensions_cc_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
