--- a/testdata/stu3/profiles/BUILD
+++ b/testdata/stu3/profiles/BUILD
@@ -24,17 +24,27 @@ gen_fhir_definitions_and_protos(
 fhir_proto_library(
     srcs = [
         "test.proto",
+    ],
+    proto_deps = [
+        "//proto/google/fhir/proto:annotations_proto",
+        "//proto/google/fhir/proto/stu3:codes_proto",
+        "//proto/google/fhir/proto/stu3:datatypes_proto",
+        "//proto/google/fhir/proto/stu3:metadatatypes_proto",
+        "//testdata/stu3/profiles:test_extensions_proto",
+    ],
+    proto_library_prefix = "test",
+)
+
+fhir_proto_library(
+    srcs = [
         "test_extensions.proto",
     ],
     proto_deps = [
         "//proto/google/fhir/proto:annotations_proto",
         "//proto/google/fhir/proto/stu3:codes_proto",
         "//proto/google/fhir/proto/stu3:datatypes_proto",
-        "//proto/google/fhir/proto/stu3:extensions_proto",
-        "//proto/google/fhir/proto/stu3:metadatatypes_proto",
-        "//proto/google/fhir/proto/stu3:resources_proto",
     ],
-    proto_library_prefix = "test",
+    proto_library_prefix = "test_extensions",
 )
 
 filegroup(
