Several fixes around resource printing.
We ensure that a trailing comma and newline are only added for nested resources if there exist some non-zero number of set fields. Additionally, early-exit if we fail to unpack a contained resource from an any_pb2.Any.

Closes #25.

PiperOrigin-RevId: 340960852

--- a/py/google/fhir/r4/BUILD
+++ b/py/google/fhir/r4/BUILD
@@ -176,6 +176,7 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:operation_outcome_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:organization_affiliation_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:organization_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:parameters_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:payment_notice_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:payment_reconciliation_py_pb2",
