Introduce fhirvalidate package for Go.
The fhirvalidate package validates a FHIR proto in Go against additional rules defined in the spec. See the package docs for more details.

PiperOrigin-RevId: 341113078

--- a/go/jsonformat/BUILD
+++ b/go/jsonformat/BUILD
@@ -18,6 +18,7 @@ go_library(
     ],
     importpath = "github.com/google/fhir/go/jsonformat",
     deps = [
+        "//go/jsonformat/fhirvalidate",
         "//go/jsonformat/internal/accessor",
         "//go/jsonformat/internal/jsonpbhelper",
         "//proto/google/fhir/proto:annotations_go_proto",
