Replace usage of std::unordered_map with absl::node_hash_map
PiperOrigin-RevId: 344082408

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -130,6 +130,7 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto/google/fhir/proto:annotations_cc_proto",
+        "@com_google_absl//absl/container:node_hash_map",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
