Update go proto import paths to match the new paths in github.com/google/fhir/go/proto (the same for both for bazel and go build). This will be in support of upcoming go modules and go get support.
PiperOrigin-RevId: 344317800

--- a/go/jsonformat/internal/accessor/BUILD
+++ b/go/jsonformat/internal/accessor/BUILD
@@ -38,6 +38,6 @@ proto_library(
 
 go_proto_library(
     name = "accessor_test_go_proto",
-    importpath = "jsonformat/internal/accessor/accessor_test_go_proto",
+    importpath = "github.com/google/fhir/go/jsonformat/internal/accessor/accessor_test_go_proto",
     proto = ":accessor_test_proto",
 )
