Update codes.code_string_to_enum_value_descriptor error handling.
In the event that we're unable to properly parse a provided code string into a
FHIR Code enum, we raise a `fhir_errors.InvalidFhirError` exception, instead
of a `ValueError`.

Closes #29.

PiperOrigin-RevId: 347741644

--- a/py/google/fhir/r4/BUILD
+++ b/py/google/fhir/r4/BUILD
@@ -243,6 +243,7 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
         "//py/google/fhir:codes",
         "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir:fhir_errors",
         requirement("absl-py"),
         requirement("six"),
     ],
