--- a/py/google/fhir/stu3/BUILD
+++ b/py/google/fhir/stu3/BUILD
@@ -73,9 +73,11 @@ py_test(
         "//py",
         "//proto/google/fhir/proto/stu3:codes_py_pb2",
         "//proto/google/fhir/proto/stu3:datatypes_py_pb2",
+        "//proto/google/fhir/proto/stu3:resources_py_pb2",
+        "//proto/google/fhir/proto/stu3:uscore_py_pb2",
         "//py/google/fhir:codes",
-        "//py/google/fhir/testing:testdata_utils",
         "//py/google/fhir:fhir_errors",
+        "//py/google/fhir/testing:testdata_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
