Adds DescriptorMemosMap util for memoizing based on subclasses of GenericDescriptor.  This provides a common abstraction layer for "learning" operations on a given version of the spec, allowing optimizations based on profiling.
PiperOrigin-RevId: 350158594

--- a/java/com/google/fhir/common/BUILD
+++ b/java/com/google/fhir/common/BUILD
@@ -1,6 +1,4 @@
-package(
-    default_visibility = ["//visibility:public"],
-)
+package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
@@ -155,4 +153,10 @@ java_library(
         "//proto/google/fhir/proto:annotations_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
+)
+
+java_library(
+    name = "descriptor_memos_map",
+    srcs = ["DescriptorMemosMap.java"],
+    deps = ["@com_google_protobuf//:protobuf_java"],
 )
