Switches protogen code from using primitive wrappers to using utility classes where possible.
PiperOrigin-RevId: 350583855

--- a/javatests/com/google/fhir/protogen/BUILD
+++ b/javatests/com/google/fhir/protogen/BUILD
@@ -44,6 +44,7 @@ java_test(
     deps = [
         "//java/com/google/fhir/common:json_format",
         "//java/com/google/fhir/protogen",
+        "//java/com/google/fhir/protogen:generator_utils",
         "//java/com/google/fhir/protogen:proto_generator_test_utils",
         "//java/com/google/fhir/wrappers:primitive_wrappers",
         "//proto/google/fhir/proto:annotations_java_proto",
