Some minor cleanups for ProtoUtils.java
Adds ProtoUtils.forEachBuilder util.  Adds tests for this and several other functions to ProtoUtilsTest.  Stops parameterizing ProtoUtilsTest on FHIR version, since nothing in ProtoUtils should be FHIR-relevant.

PiperOrigin-RevId: 350943018

--- a/javatests/com/google/fhir/common/BUILD
+++ b/javatests/com/google/fhir/common/BUILD
@@ -109,10 +109,9 @@ java_test(
     test_class = "com.google.fhir.common.ProtoUtilsTest",
     deps = [
         "//java/com/google/fhir/common:proto_utils",
-        "//proto/google/fhir/proto/r4/core/resources:patient_java_proto",
-        "//proto/google/fhir/proto/stu3:resources_java_proto",
+        "//testdata:generic_proto_java_proto",
         "@com_google_protobuf//:protobuf_java",
-        "@maven//:com_google_guava_guava",
+        "@maven//:com_google_truth_extensions_truth_proto_extension",
         "@maven//:com_google_truth_truth",
         "@maven//:junit_junit",
     ],
