Clean-up of ResourceUtils.java.
Makes multiversion, eliminates some trivial/barely used APIs, and adds tests.

PiperOrigin-RevId: 351236653

--- a/testdata/BUILD
+++ b/testdata/BUILD
@@ -10,3 +10,10 @@ fhir_proto_library(
     srcs = ["generic_proto.proto"],
     proto_library_prefix = "generic_proto",
 )
+
+filegroup(
+    name = "resource_utils_testdata",
+    srcs = glob([
+        "resource_utils-*",
+    ]),
+)
