Adds Codes.java utility function for getting a code enum from a code string.
PiperOrigin-RevId: 351246892

--- a/java/com/google/fhir/common/BUILD
+++ b/java/com/google/fhir/common/BUILD
@@ -161,6 +161,7 @@ java_library(
     srcs = ["Codes.java"],
     deps = [
         ":descriptor_memos_map",
+        ":exceptions",
         ":fhir_types",
         ":proto_utils",
         "//proto/google/fhir/proto:annotations_java_proto",
