Converts some classes of exceptions from unchecked IllegalArgumentExceptions to checked InvalidFhirExceptions
The two main classes of this are:
1) Exceptions arising from malformed FHIR json.  This causes things like JsonFormat to emit InvalidFhirExceptions.
2) Exceptions arising from unmet assumptions about proto format during reflective operations, e.g., fields that are missing.  This causes things like generators or util functions to emit InvalidFhirExceptions

PiperOrigin-RevId: 351726781

--- a/java/com/google/fhir/common/BUILD
+++ b/java/com/google/fhir/common/BUILD
@@ -20,6 +20,7 @@ java_library(
     name = "proto_utils",
     srcs = ["ProtoUtils.java"],
     deps = [
+        ":exceptions",
         "//java/com/google/fhir/common:annotation_utils",
         "@com_google_protobuf//:protobuf_java",
     ],
@@ -66,6 +67,7 @@ java_library(
     srcs = ["JsonFormat.java"],
     deps = [
         ":annotation_utils",
+        ":exceptions",
         ":proto_gen_transformer",
         ":proto_utils",
         ":resource_utils",
@@ -89,6 +91,7 @@ java_library(
     ],
     deps = [
         ":annotation_utils",
+        ":exceptions",
         ":proto_utils",
         "@com_google_protobuf//:protobuf_java",
         "@maven//:com_google_guava_guava",
@@ -150,7 +153,7 @@ java_library(
     name = "extensions",
     srcs = ["Extensions.java"],
     deps = [
-        ":fhir_types",
+        ":exceptions",
         ":proto_utils",
         "@com_google_protobuf//:protobuf_java",
     ],
