--- a/java/com/google/fhir/examples/BUILD
+++ b/java/com/google/fhir/examples/BUILD
@@ -13,6 +13,7 @@ java_library(
     ],
     deps = [
         "//java/com/google/fhir/common:big_query_schema",
+        "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/common:json_format",
         "//java/com/google/fhir/common:resource_utils",
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_java_proto",
