--- a/java/com/google/fhir/protogen/BUILD
+++ b/java/com/google/fhir/protogen/BUILD
@@ -11,6 +11,7 @@ java_library(
     deps = [
         ":generator_utils",
         ":protogen",
+        "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/common:proto_utils",
         "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto:profile_config_java_proto",
@@ -28,6 +29,7 @@ java_binary(
     main_class = "com.google.fhir.protogen.ValueSetGeneratorMain",
     deps = [
         ":protogen",
+        "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/common:json_format",
         "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto:profile_config_java_proto",
@@ -44,6 +46,7 @@ java_library(
     srcs = ["GeneratorUtils.java"],
     visibility = ["//javatests/com/google/fhir/protogen:__pkg__"],
     deps = [
+        "//java/com/google/fhir/common:exceptions",
         "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto/r4/core:codes_java_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_java_proto",
@@ -98,6 +101,7 @@ java_binary(
         ":generator_utils",
         ":protogen",
         "//java/com/google/fhir/common:annotation_utils",
+        "//java/com/google/fhir/common:exceptions",
         "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto:profile_config_java_proto",
         "//proto/google/fhir/proto/r4/core:codes_java_proto",
@@ -114,6 +118,7 @@ java_binary(
     main_class = "com.google.fhir.protogen.ProfileGeneratorMain",
     deps = [
         ":protogen",
+        "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/common:json_format",
         "//proto/google/fhir/proto:profile_config_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_java_proto",
