Fixes bug in C++ printer where an embedded \0 control character would cause strings to be printed incorrectly
PiperOrigin-RevId: 351919965

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -192,6 +192,7 @@ cc_test(
     srcs = ["json_format_test.cc"],
     data = [
         "//spec:r4_examples",
+        "//testdata/jsonformat",
         "//testdata/r4:bigquery",
         "//testdata/r4:examples",
         "//testdata/r4/profiles:testdata",
