Adds DescriptorMemosMap API for a compute function that throws an exception.
PiperOrigin-RevId: 352852643

--- a/java/com/google/fhir/common/BUILD
+++ b/java/com/google/fhir/common/BUILD
@@ -146,7 +146,9 @@ java_library(
 java_library(
     name = "descriptor_memos_map",
     srcs = ["DescriptorMemosMap.java"],
-    deps = ["@com_google_protobuf//:protobuf_java"],
+    deps = [
+        "@com_google_protobuf//:protobuf_java",
+    ],
 )
 
 java_library(
