Introduces PrimitiveTestSuite protos that encapsulate all the testdata currently in individual wrapper tests, as well as .{invalid|valid}.{ndjson|prototxt} files that do weird stuff like dash-delimited prototxt.
Replaces existing java primitive tests with unified PrimitiveWrapperTest that uses these suites.  Follow-up changes will reuse these protos in other languages.

Minor bug fix to decimal wrapper: Validating a proto with scientific notation would not check the bounds, so things like "10E+500" would be valid despite being beyond the bounds of a double.

PiperOrigin-RevId: 356774567

--- a/proto/google/fhir/proto/r4/BUILD
+++ b/proto/google/fhir/proto/r4/BUILD
@@ -63,3 +63,11 @@ fhir_proto_library(
     ],
     proto_library_prefix = "uscore_codes",
 )
+
+fhir_proto_library(
+    srcs = ["primitive_test_suite.proto"],
+    proto_deps = [
+        "//proto/google/fhir/proto/r4/core:datatypes_proto",
+    ],
+    proto_library_prefix = "primitive_test_suite",
+)
