--- a/javatests/com/google/fhir/wrappers/BUILD
+++ b/javatests/com/google/fhir/wrappers/BUILD
@@ -5,45 +5,6 @@ package(
 licenses(["notice"])
 
 java_test(
-    name = "DateTimeWrapperTest",
-    size = "small",
-    srcs = ["DateTimeWrapperTest.java"],
-    test_class = "com.google.fhir.wrappers.DateTimeWrapperTest",
-    deps = [
-        "//java/com/google/fhir/wrappers:primitive_wrappers",
-        "//proto/google/fhir/proto/r4/core:datatypes_java_proto",
-        "@maven//:com_google_truth_truth",
-        "@maven//:junit_junit",
-    ],
-)
-
-java_test(
-    name = "DateWrapperTest",
-    size = "small",
-    srcs = ["DateWrapperTest.java"],
-    test_class = "com.google.fhir.wrappers.DateWrapperTest",
-    deps = [
-        "//java/com/google/fhir/wrappers:primitive_wrappers",
-        "//proto/google/fhir/proto/r4/core:datatypes_java_proto",
-        "@maven//:com_google_truth_truth",
-        "@maven//:junit_junit",
-    ],
-)
-
-java_test(
-    name = "DecimalWrapperTest",
-    size = "small",
-    srcs = ["DecimalWrapperTest.java"],
-    test_class = "com.google.fhir.wrappers.DecimalWrapperTest",
-    deps = [
-        "//java/com/google/fhir/wrappers:primitive_wrappers",
-        "//proto/google/fhir/proto/r4/core:datatypes_java_proto",
-        "@maven//:com_google_truth_truth",
-        "@maven//:junit_junit",
-    ],
-)
-
-java_test(
     name = "ExtensionWrapperTest",
     size = "medium",
     srcs = ["ExtensionWrapperTest.java"],
@@ -65,26 +26,28 @@ java_test(
 )
 
 java_test(
-    name = "InstantWrapperTest",
-    size = "small",
-    srcs = ["InstantWrapperTest.java"],
-    test_class = "com.google.fhir.wrappers.InstantWrapperTest",
-    deps = [
-        "//java/com/google/fhir/wrappers:primitive_wrappers",
-        "//proto/google/fhir/proto/r4/core:datatypes_java_proto",
-        "@maven//:com_google_truth_truth",
-        "@maven//:junit_junit",
+    name = "PrimitiveWrappersTest",
+    size = "medium",
+    srcs = ["PrimitiveWrappersTest.java"],
+    data = [
+        "//testdata/primitives",
     ],
-)
-
-java_test(
-    name = "TimeWrapperTest",
-    size = "small",
-    srcs = ["TimeWrapperTest.java"],
-    test_class = "com.google.fhir.wrappers.TimeWrapperTest",
+    test_class = "com.google.fhir.wrappers.PrimitiveWrappersTest",
     deps = [
+        "//java/com/google/fhir/common:annotation_utils",
+        "//java/com/google/fhir/common:exceptions",
+        "//java/com/google/fhir/common:extensions",
+        "//java/com/google/fhir/common:fhir_types",
+        "//java/com/google/fhir/common:proto_utils",
         "//java/com/google/fhir/wrappers:primitive_wrappers",
+        "//proto/google/fhir/proto/r4:primitive_test_suite_java_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_java_proto",
+        "//proto/google/fhir/proto/stu3:datatypes_java_proto",
+        "//proto/google/fhir/proto/stu3:primitive_test_suite_java_proto",
+        "@bazel_tools//tools/java/runfiles",
+        "@com_google_protobuf//:protobuf_java",
+        "@maven//:com_google_code_gson_gson",
+        "@maven//:com_google_guava_guava",
         "@maven//:com_google_truth_truth",
         "@maven//:junit_junit",
     ],
