--- a/testdata/jsonformat/BUILD
+++ b/testdata/jsonformat/BUILD
@@ -8,5 +8,7 @@ filegroup(
     name = "jsonformat",
     srcs = [
         "observation_invalid_unicode.prototxt",
+        "observation_three_digit_year.json",
+        "observation_three_digit_year.prototxt",
     ],
 )
