Modifies C++ JSON printing behavior to print ALL control characters.  This takes a permissive stance towards the FHIR definition of strings, which states that "Strings SHOULD not contain Unicode character points below 32, except for u0009 (horizontal tab), u0010 (carriage return) and u0013 (line feed)."
PiperOrigin-RevId: 358064676

--- a/testdata/jsonformat/BUILD
+++ b/testdata/jsonformat/BUILD
@@ -6,9 +6,8 @@ licenses(["notice"])
 
 filegroup(
     name = "jsonformat",
-    srcs = [
-        "observation_invalid_unicode.prototxt",
-        "observation_three_digit_year.json",
-        "observation_three_digit_year.prototxt",
-    ],
+    srcs = glob([
+        "*.json",
+        "*.prototxt",
+    ]),
 )
