Make it so references to type Resource can be restricted to any target by child profiles.
PiperOrigin-RevId: 359795643

--- a/java/com/google/fhir/protogen/BUILD
+++ b/java/com/google/fhir/protogen/BUILD
@@ -72,6 +72,7 @@ java_library(
         "//java/com/google/fhir/common:codes",
         "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/common:extensions",
+        "//java/com/google/fhir/common:fhir_types",
         "//java/com/google/fhir/common:fhir_version",
         "//java/com/google/fhir/common:json_format",
         "//java/com/google/fhir/common:resource_utils",
